@@ -48,7 +48,6 @@ set (SMB_INCLUDES
    ${CMAKE_SOURCE_DIR}/samba/lib/replace
    ${CMAKE_SOURCE_DIR}/samba/ntvfs
    ${CMAKE_SOURCE_DIR}/samba/param
-   ${CMAKE_SOURCE_DIR}/samba/torture
    ${CMAKE_SOURCE_DIR}/samba/lib/talloc
    ${CMAKE_SOURCE_DIR}/samba/librpc/ndr
    ${CMAKE_CURRENT_BINARY_DIR}/librpc/gen_ndr/
