@@ -43,7 +43,6 @@ set (SMB_INCLUDES
    ${CMAKE_SOURCE_DIR}/samba/lib/replace
    ${CMAKE_SOURCE_DIR}/samba/ntvfs
    ${CMAKE_SOURCE_DIR}/samba/param
-   ${CMAKE_SOURCE_DIR}/samba/torture
    ${CMAKE_SOURCE_DIR}/samba/winexe
    ${CMAKE_BINARY_DIR}/samba
 )
